--- a/WebApp/Dockerfile
+++ b/WebApp/Dockerfile
@@ -9,6 +9,9 @@ RUN dotnet restore
 # Copy the entire application code
 COPY . ./
 
+RUN dotnet add package Npgsql --version 5.0.12
+RUN dotnet add package Newtonsoft.Json --version 13.0.3
+
 RUN dotnet build -c Release -o out
 
 # Publish the application
