--- a/WebAppSend/Dockerfile
+++ b/WebAppSend/Dockerfile
@@ -9,6 +9,7 @@ COPY . ./
 
 RUN dotnet add package Npgsql --version 5.0.12
 RUN dotnet add package RabbitMQ.Client --version 6.8.1
+RUN dotnet add package Newtonsoft.Json --version 13.0.3
 
 RUN dotnet build -c Release -o out
 
@@ -21,4 +22,3 @@ COPY --from=build-env /WebAppSend/out .
 EXPOSE 80
 
 ENTRYPOINT ["dotnet", "WebAppSend.dll"]
-
